# in3-example-android

./: .gitignore  README.md  build.gradle  local.properties  update_in3.sh
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/incubed/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/bindings/java/: CMakeLists.txt
app/src/main/core/: CMakeLists.txt
app/src/main/core/client/: client.c
app/src/main/eth_api/: CMakeLists.txt
app/src/main/eth_basic/: CMakeLists.txt
app/src/main/eth_full/: CMakeLists.txt
app/src/main/eth_nano/: CMakeLists.txt
app/src/main/java/com/example/incubed/: MainActivity.java  MainActivity.kt
app/src/main/java/in3/: IN3.java
app/src/main/libin3/: CMakeLists.txt  in3_IN3.c
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/incubed/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
